<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/about_background"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/sobre_e_doa_es2"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:titleTextColor="@android:color/white"
            android:layout_marginBottom="24dp"/>

        <!-- Cabeçalho do App -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bkg_page"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAppVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/about_app_version"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvAppDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/about_app_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bkg_page"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_support_development"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:text="@string/about_donation_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- PayPal e PIX (Mesma caixa) -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bkg_page"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_paypal_pix"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/about_paypal_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCopiarEmail"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/bkg_button"
                    android:text="@string/about_copy_email"
                    android:textColor="@color/text_button" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Wise -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bkg_page"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_wise"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/about_wise_id"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnDoacaoWise"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/bkg_button"
                        android:text="@string/about_open_wise"
                        android:textColor="@color/text_button" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCopiarWise"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/bkg_button"
                        android:text="@string/about_copy_wise_id"
                        android:textColor="@color/text_button" />

                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Lightning -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bkg_page"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_lightning"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="mightynepal82@walletofsatoshi.com"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDoacaoLightning"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/bkg_button"
                    android:text="@string/about_copy_lightning"
                    android:textColor="@color/text_button" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Bitcoin On-Chain -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bkg_page"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_bitcoin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="bc1qjahmm3qtzpn9kc86j8uedejjuvtlp66z8w3wek"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDoacaoBitcoin"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/bkg_button"
                    android:text="@string/about_copy_bitcoin"
                    android:textColor="@color/text_button" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Outras Opções -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCompartilhar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_share_app"
            android:backgroundTint="#4EFF0000"
            android:textColor="@color/text_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

        <!-- Créditos -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/about_developed_with_love"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="italic"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_gravity="center" />

    </LinearLayout>
</ScrollView>